--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,10 @@
-#root {
-}
-
 body {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	overflow: hidden;
+	background-color: cadetblue;
 }
 
 code {
